--- a/Nutritional.css
+++ b/Nutritional.css
@@ -52,10 +52,11 @@
 
 #absolute {
   position: absolute;
-  left: 335px;
-  width: 400px;
+  left: 315px;
+  width: 450px;
   padding: 30px;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .column {
